# gitea-mcp

./: PLAN.md  README.md  pyproject.toml
.github/workflows/: build.yml
docs/: index.html
src/gitea_mcp/: __init__.py  __main__.py  client.py  config.py  prepare.py  server.py  server_compact.py  tools.py
tests/: conftest.py  docker-compose.yml  test_brief.py  test_force_private.py  test_integration.py
