[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitea-mcp"
version = "1.0.0"
description = "MCP server for Gitea — full API coverage for autonomous agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]
keywords = ["mcp", "gitea", "git", "model-context-protocol", "claude", "ai", "actions", "ci"]

[project.scripts]
gitea-mcp = "gitea_mcp:main"

[project.urls]
Homepage = "https://github.com/nikitatsym/gitea-mcp"
Repository = "https://github.com/nikitatsym/gitea-mcp"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
